--- a/Lab application/index.html
+++ b/Lab application/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Homework">
         <meta name="keywords" content="HTML, CSS, JavaScript, PHP">
-        <meta name="author" content="Abdullah Ergul">
+        <meta name="author" content="Emrah Dasdemir">
         <title>Lab Application</title>
         <style>
             body{
@@ -22,18 +22,18 @@
     </head>
 <body>
     <form method="post" action="submit.php">
-        <label for="name">Full Name:</label><br>
-        <input type="text" id="name" name="name" required><br><br>
+        <label for="isim">Tam isim:</label><br>
+        <input type="text" id="isim" name="isim" required><br><br>
 
         <label for="email">Email Address:</label><br>
         <input type="email" id="email" name="email" required><br><br>
 
         <label>Gender:</label>
-        <input type="radio" id="male" name="gender" value="Male" required>
-        <label for="male">Male</label>
+        <input type="radio" id="erkek" name="cinsiyet" value="Erkek" required>
+        <label for="erkek">Male</label>
 
-        <input type="radio" id="female" name="gender" value="Female" required>
-        <label for="female">Female</label><br><br>
+        <input type="radio" id="kadin" name="cinsiyet" value="kadin" required>
+        <label for="kadin">kadin</label><br><br>
 
         <input type="submit" value="Submit">
     </form>
